Java 21 Migration: Replace sun.misc.Unsafe with VarHandle in AbstractFuture
- Add imports for java.lang.invoke.MethodHandles and java.lang.invoke.VarHandle
- Replace UnsafeAtomicHelper with VarHandleAtomicHelper class for Java 21 compatibility
- Update static initialization block to prefer VarHandleAtomicHelper over deprecated Unsafe
- Maintain identical lock-free operation semantics using VarHandle.compareAndSet() and VarHandle.set()
- Preserve existing fallback chain: VarHandleAtomicHelper -> SafeAtomicHelper -> SynchronizedHelper
- All atomic operations on waiters, listeners, value fields now use modern VarHandle API
- DataNode disk health checking functionality preserved without behavioral changes